# imdb

./: .env  .env.example  docker-compose.yml  main.py  pyproject.toml
app/: client.py  config.py  deps.py  main.py
app/db/: mongo.py
app/routers/: movies.py  scrape.py  summarize.py
app/schemas/: movie.py
app/services/ai/: summarizer.py
app/services/repo/: movies_repo.py
app/services/scraper/: imdb_scraper.py
